# facade

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml
example/: CMakeLists.txt  example.cpp
facade/: CMakeLists.txt  facade.cpp  facade.h  master.h  utils.h  worker_pool.h
facade_test/: CMakeLists.txt  multithread.cpp  test.cpp
include/facade/: CMakeLists.txt  facade.h  master.h  utils.h
test/: CMakeLists.txt  facade.cpp  test.cpp
